# start_agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.superpowers/brainstorm/333-1779593479/content/: architecture-approaches.html  layered-arch.html  memory-design.html  model-provider.html  project-structure.html  session-design.html  stategraph-design.html  tool-skill-design.html
config/: model.yaml  settings.py  skills.yaml
docs/: agent架构.md  测试样例.md
docs/superpowers/plans/: 2026-05-24-agent-platform-plan.md
docs/superpowers/specs/: 2026-05-24-agent-platform-design.md
src/agent/: __init__.py  compact.py  graph.py  state.py
src/agent/nodes/: __init__.py  act.py  observe.py  think.py
src/db/: __init__.py  engine.py  models.py
src/memory/: __init__.py  models.py  provider.py  sqlite_provider.py
src/models/: __init__.py  config_loader.py  openai_compat.py  provider.py
src/pyagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/server/: __init__.py  app.py
src/server/routers/: chat.py  session.py
src/server/schemas/: __init__.py  request.py  response.py
src/skills/: __init__.py  registry.py
src/skills/definitions/: __init__.py
src/tools/: __init__.py  base.py  registry.py
src/tools/builtin/: __init__.py  database.py  file_ops.py  http.py  search.py  shell.py
tests/: conftest.py  test_agent_nodes.py  test_agent_state.py  test_db.py  test_graph.py  test_integration.py  test_memory.py  test_models.py  test_skills.py  test_tools.py  test_tools_file_ops.py  test_tools_others.py  test_tools_search.py
(+1 files in other folders)
